<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f3f3"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="60dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/more_name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_work_address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/more_work_address"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/tv_ticket_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/more_email"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_ticket_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/more_phone"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_ticket_order_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/more_order_id"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_ticket_total_amount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/more_total_amount"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_ticket_discount_amount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/more_discount_amount"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_ticket_refunded_amount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/more_refunded_amount"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="#f3f3f3" />

            <TextView
                android:id="@+id/tv_btn_settings"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="?attr/selectableItemBackground"
                android:drawableLeft="@drawable/ic_settings_black_24dp"
                android:drawablePadding="16dp"
                android:drawableRight="@drawable/fragmentation_ic_right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/settings"
                android:textSize="16sp" />
        </LinearLayout>

    </ScrollView>
</FrameLayout>