<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_login_get_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/login_get_token"
        android:textColor="@color/white" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login_get_token"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="@string/login_logo"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_login_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_login_token"
            android:gravity="center"
            android:hint="@string/login_token"
            android:inputType="number"
            android:padding="5dp"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_login_go"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@drawable/shape_login_go"
            android:padding="5dp"
            android:stateListAnimator="@drawable/animator_login_btn_z"
            android:text="@string/login_go"
            android:textColor="@color/white"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/btn_login_no_token"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login_go"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_no_go"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/login_logo"
        android:textColor="@color/white"
        android:textSize="11sp" />

</RelativeLayout>