<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay"
        app:titleTextAppearance="@style/Toolbar_TextAppearance_White" />


    <TextView
        android:id="@+id/tv_btn_updata_app"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackground"
        android:drawableLeft="@drawable/ic_system_update_black_24dp"
        android:drawablePadding="16dp"
        android:drawableRight="@drawable/fragmentation_ic_right"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/updata"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#f3f3f3" />


    <TextView
        android:id="@+id/tv_btn_about"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackground"
        android:drawableLeft="@drawable/ic_palette_black_24dp"
        android:drawablePadding="16dp"
        android:drawableRight="@drawable/fragmentation_ic_right"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/about"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#f3f3f3" />

    <TextView
        android:id="@+id/tv_btn_logged_out"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackground"
        android:drawableLeft="@drawable/ic_exit_to_app_black_24dp"
        android:drawablePadding="16dp"
        android:drawableRight="@drawable/fragmentation_ic_right"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/exit"
        android:textSize="16sp" />

</LinearLayout>